# hotels_api

./: .gitignore  Dockerfile  pyproject.toml
api_practice/: db.py  exceptions.py  main.py  models.py
api_practice/Bookings/: dao.py  models.py  router.py  schemas.py
api_practice/Rooms/: models.py
api_practice/Users/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
api_practice/dao/: base.py
api_practice/hotels/: dao.py  dependencies.py  models.py  router.py  schemas.py
api_practice/hotels/rooms/: dao.py  models.py  router.py
api_practice/images/: router.py
api_practice/pages/: router.py
migrations/: env.py
migrations/versions/: 0547f65a4280_check.py  5a9ea383896a_modifying_bookings_rooms_users.py  813153550214_initial_migration.py  dc4ba26aec0c_add_tables_bookings_rooms_users.py  fd2b4ab2dd35_modifying_bookings_rooms_users.py
src/: db.py  main.py
src/Bookings/: dao.py  router.py
src/Users/: auth.py  dao.py  dependencies.py  router.py
src/bookings/: models.py  router.py
src/dao/: base.py
src/hotels/: dao.py  models.py  router.py
src/hotels/rooms/: dao.py  models.py  router.py
src/images/: router.py
src/pages/: router.py
src/tasks/: celery.py  tasks.py
src/templates/: hotels.html
src/users/: auth.py  dependencies.py  models.py  router.py
