[tool.poetry] 
name = "api-practice"
version = "0.1.0"
description = ""
authors = ["Danil <spbondest@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
alembic = "^1.12.1"
python-decouple = "^3.8"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.5.2"}
python-jose = "^3.3.0"
pydantic-extra-types = "^2.1.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
celery = "^5.3.6"
flower = "^2.0.1"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

